--- a/login.html
+++ b/login.html
@@ -3,42 +3,50 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>世标检测系统</title>
+  <title>深圳计量院认证系统</title>
   <link rel="stylesheet" href="layui/css/layui.css">
   <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
     <div class="login">
-      <div class="main">
-        <img class="header" src="images/LOGO@2x.png" alt="">
-        <div class="line1"></div>
-        <form action="">
-          <div class="input_div input_div1">
-            <img id="img1" src="images/user.png" alt="">
-            <input type="text" name="userName" placeholder="请输入用户名称" onfocus="mouseOver('0')" onblur="mouseOut()">
-          </div>
-          <div class="input_div input_div2">
-            <img id="img2" class="" src="images/password.png" alt="">
-            <input type="password" name="password" placeholder="请输入登录密码" onfocus="mouseOver('1')" onblur="mouseOut()">
-          </div>
-          <button type="button" class="layui-btn layui-btn-fluid layui-btn-radius layui-btn-primary" onclick="window.location.href='index.html'">登&nbsp;&nbsp;录</button>
-        </form>
-        <div class="layui-row">
-          <div class="layui-col-md4">
-            <a >忘记密码？</a>
-          </div>
-          <div class="layui-col-md4">
-              <a>注册企业用户</a>
-          </div>
-          <div class="layui-col-md4">
-              <a>注册个人用户</a>
-            </div>
+      <div class="title">
+        <img src="images/logoTitle.png" alt="">
+        <div class="rightPart">
+          <p>守护品质 传递信任</p>
+          <p>内部员工登录</p>
         </div>
       </div>
+      <div class="main">
+        <div class="main_main">
+          <p>欢迎使用SMQ认证操作平台</p>
+          <div class="line1"></div>
+          <form action="">
+            <div class="input_div input_div1">
+              <img id="img1" src="images/username.png" alt="">
+              <input type="text" name="userName" placeholder="请输入用户名称" onfocus="mouseOver('0')" onblur="mouseOut()">
+            </div>
+            <div class="input_div input_div2">
+              <img id="img2" class="" src="images/password.png" alt="">
+              <input type="password" name="password" placeholder="请输入登录密码" onfocus="mouseOver('1')" onblur="mouseOut()">
+            </div>
+            <button type="button" class="layui-btn layui-btn-fluid layui-btn-radius layui-btn-primary" onclick="window.location.href='index.html'">登&nbsp;&nbsp;录</button>
+          </form>
+          <div class="layui-row">
+            <div class="layui-col-md4">
+              <a>企业注册</a>
+            </div>
+            <div class="layui-col-md6 layui-col-md-offset2">
+              <a>忘记用户名或密码</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      
       <div class="footer">
-        <p>深圳世标检测认证股份有限公司 版权所有</p>
-        <p>联系电话： 0086-0755-26996143/4/5 0086-075526996192（LINE）</p>
-        <p>World Standardization Certification & Testing Group (Shenzhen) Co., LTD</p>
+        <p>
+          <img src="images/footLogo.png" alt="">
+          粤ICP备11022419号-3 版权所有：深圳市计量质量检测研究院
+        </p>
       </div>
     </div>
 <script src="layui/layui.js"></script>
