--- a/login.html
+++ b/login.html
@@ -82,7 +82,7 @@
               <div class="layui-row">
                 <div class="layui-col-md6">
                   <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>用户名</label>
+                    <label class="layui-form-label"><span class="red">*</span>用户名：</label>
                     <div class="layui-input-block">
                       <input type="text" name="title" required  lay-verify="required" placeholder="纯字母或者字母+数字" autocomplete="off" class="layui-input">
                     </div>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="layui-col-md6">
                   <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>密码</label>
+                    <label class="layui-form-label"><span class="red">*</span>密码：</label>
                     <div class="layui-input-block">
                       <input type="password" name="password" required lay-verify="required" placeholder="数字+字母不得少于6位" autocomplete="off" class="layui-input">
                     </div>
@@ -100,7 +100,7 @@
               <div class="layui-row">
                 <div class="layui-col-md6">
                   <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>确认密码</label>
+                    <label class="layui-form-label"><span class="red">*</span>确认密码：</label>
                     <div class="layui-input-block">
                       <input type="password" name="password" required lay-verify="required" placeholder="数字+字母不得少于6位" autocomplete="off" class="layui-input">
                     </div>
@@ -108,7 +108,7 @@
                 </div>
                 <div class="layui-col-md6">
                   <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>所在行政区划</label>
+                    <label class="layui-form-label"><span class="red">*</span>所在行政区划：</label>
                     <div class="layui-input-block">
                       <!-- <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input"> -->
                       <select name="province" lay-verify="required">
@@ -143,7 +143,7 @@
               <div class="layui-row">
                 <div class="layui-col-md6">
                   <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>您的身份</label>
+                    <label class="layui-form-label"><span class="red">*</span>您的身份：</label>
                     <div class="layui-input-block">
                       <input type="radio" name="sf" value="委托人" title="委托人">
                       <input type="radio" name="sf" value="制造商" title="制造商">
@@ -157,7 +157,7 @@
                 </div>
                 <div class="layui-col-md6">
                   <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>企业名称</label>
+                    <label class="layui-form-label"><span class="red">*</span>企业名称：</label>
                     <div class="layui-input-block">
                       <input type="text" name="title" required  lay-verify="required" placeholder="请输入..." autocomplete="off" class="layui-input">
                     </div>
@@ -167,7 +167,7 @@
               <div class="layui-row">
                 <div class="layui-col-md6">
                   <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>企业地址</label>
+                    <label class="layui-form-label"><span class="red">*</span>企业地址：</label>
                     <div class="layui-input-block">
                       <input type="text" name="title" required  lay-verify="required" placeholder="请输入..." autocomplete="off" class="layui-input">
                     </div>
@@ -175,7 +175,7 @@
                 </div>
                 <div class="layui-col-md6">
                   <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>社会统一信用代码</label>
+                    <label class="layui-form-label"><span class="red">*</span>社会统一信用代码：</label>
                     <div class="layui-input-block">
                       <input type="text" name="title" required  lay-verify="required" placeholder="请输入..." autocomplete="off" class="layui-input">
                     </div>
@@ -185,7 +185,7 @@
               <div class="layui-row">
                 <div class="layui-col-md6">
                   <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>法人代表名称</label>
+                    <label class="layui-form-label"><span class="red">*</span>法人代表名称：</label>
                     <div class="layui-input-block">
                       <input type="text" name="title" required  lay-verify="required" placeholder="请输入..." autocomplete="off" class="layui-input">
                     </div>
@@ -193,7 +193,7 @@
                 </div>
                 <div class="layui-col-md6">
                   <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>联系人</label>
+                    <label class="layui-form-label"><span class="red">*</span>联系人：</label>
                     <div class="layui-input-block tipsDiv">
                       <input type="text" name="title" required  lay-verify="required" placeholder="请输入..." autocomplete="off" class="layui-input">
                       <!-- <span class="tips"></span> -->
@@ -206,7 +206,7 @@
               <div class="layui-row">
                 <div class="layui-col-md6">
                   <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>联系人职务</label>
+                    <label class="layui-form-label"><span class="red">*</span>联系人职务：</label>
                     <div class="layui-input-block">
                       <input type="text" name="title" required  lay-verify="required" placeholder="请输入..." autocomplete="off" class="layui-input">
                     </div>
@@ -214,25 +214,7 @@
                 </div>
                 <div class="layui-col-md6">
                   <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>联系人身份证号码</label>
-                    <div class="layui-input-block">
-                      <input type="text" name="title" required  lay-verify="required" placeholder="请输入..." autocomplete="off" class="layui-input">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="layui-row">
-                <div class="layui-col-md6">
-                  <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>联系人手机号码</label>
-                    <div class="layui-input-block">
-                      <input type="text" name="title" required  lay-verify="required" placeholder="请输入..." autocomplete="off" class="layui-input">
-                    </div>
-                  </div>
-                </div>
-                <div class="layui-col-md6">
-                  <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>座机</label>
+                    <label class="layui-form-label"><span class="red">*</span>联系人身份证号码：</label>
                     <div class="layui-input-block">
                       <input type="text" name="title" required  lay-verify="required" placeholder="请输入..." autocomplete="off" class="layui-input">
                     </div>
@@ -242,7 +224,7 @@
               <div class="layui-row">
                 <div class="layui-col-md6">
                   <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>邮箱</label>
+                    <label class="layui-form-label"><span class="red">*</span>联系人手机号码：</label>
                     <div class="layui-input-block">
                       <input type="text" name="title" required  lay-verify="required" placeholder="请输入..." autocomplete="off" class="layui-input">
                     </div>
@@ -250,7 +232,25 @@
                 </div>
                 <div class="layui-col-md6">
                   <div class="layui-form-item">
-                    <label class="layui-form-label"><span class="red">*</span>上传营业执照</label>
+                    <label class="layui-form-label"><span class="red">*</span>座机：</label>
+                    <div class="layui-input-block">
+                      <input type="text" name="title" required  lay-verify="required" placeholder="请输入..." autocomplete="off" class="layui-input">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="layui-row">
+                <div class="layui-col-md6">
+                  <div class="layui-form-item">
+                    <label class="layui-form-label"><span class="red">*</span>邮箱：</label>
+                    <div class="layui-input-block">
+                      <input type="text" name="title" required  lay-verify="required" placeholder="请输入..." autocomplete="off" class="layui-input">
+                    </div>
+                  </div>
+                </div>
+                <div class="layui-col-md6">
+                  <div class="layui-form-item">
+                    <label class="layui-form-label"><span class="red">*</span>上传营业执照：</label>
                     <div class="layui-input-block uploadDiv">
                       <!-- <input type="text" name="title" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input"> -->
                       <div class="borderDiv">
@@ -307,6 +307,7 @@ layui.use('upload', function(){
   //执行实例
   var uploadInst = upload.render({
     elem: '#test1' //绑定元素
+    ,accept:'images'
     ,url: '/upload/' //上传接口
     ,done: function(res){
       //上传完毕回调
