--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
               <dd><a href="javascript:;" data-id="cers" data-header="合格证管理_填写认证申请">合格证申请书</a></dd>
               <dd><a href="javascript:;" data-id="audit" data-header="我的申请_待审核的申请">待审核申请</a></dd>
               <dd><a href="javascript:;" data-id="payDetail" data-header="一级菜单_支付款项">支付款项</a></dd>
+              <dd><a href="javascript:;" data-id="ensureDetail" data-header="一级菜单_确认收款">确认收款</a></dd>
+              <dd><a href="javascript:;" data-id="newB" data-header="一级菜单_新增标志">新增标志</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item firstMenu"><a href="javascript:;"><img src="images/logo3.png" alt="">证书列表<i class="layui-icon layui-icon-down"></i></a></li>
@@ -910,19 +912,29 @@
       </div>
     </div>
     <!-- 待审核申请 -->
-    <div class="page" id="audit" data-header="首页_待审核申请" data-url="index">
-      <form action="" class="form_table">
+    <div class="page" id="audit">
+      <form action="" class="form_table layui-form flexbox">
+        <input type="text" name="title" required lay-verify="required" placeholder="流水号" autocomplete="off" class="layui-input">
           <input type="text" name="title" required lay-verify="required" placeholder="申请标题" autocomplete="off" class="layui-input">
           <input type="text" name="title" required lay-verify="required" placeholder="委托人" autocomplete="off" class="layui-input">
-          <input type="text" name="title" required lay-verify="required" placeholder="认证类别" autocomplete="off" class="layui-input">
-          <input type="text" name="title" required lay-verify="required" placeholder="申请类别" autocomplete="off" class="layui-input">
+          <select name="type" class="layui-select">
+            <option value="">请选择</option>
+            <option value="1">认证类别</option>
+          </select> 
+          <select name="type2" class="layui-select">
+            <option value="">请选择</option>
+            <option value="1">申请类别</option>
+          </select>
           <button type="button" class="layui-btn layui-btn-primary btn1">查询</button>
-          <button type="button" class="layui-btn layui-btn-primary btn2">选择</button>
+          <button type="button" class="layui-btn layui-btn-primary btn2">重置</button>
+          <button type="button" class="layui-btn layui-btn-primary btn3">
+            <i class="layui-icon">&#xe640;</i>批量删除
+          </button>
       </form>
       <table class="layui-hide" id="test"></table>
     </div>
     <!-- 合格证管理、填写认证申请 -->
-    <div class="page" id="cers" data-header="合格证管理_填写认证申请" data-url="index">
+    <div class="page" id="cers">
       <div class="layui-row">
         <div class="layui-col-md6 part part1 marginbottom15">
           <div class="part_header">
@@ -971,7 +983,7 @@
       </div>
     </div>
     <!-- 支付款项 -->
-    <div class="page" id="payDetail" data-header="合格证管理_填写认证申请" data-url="index">
+    <div class="page common" id="payDetail">
       <p class="boder_1">支付款项</p>
       <div class="layui-row mods">
         <div class="layui-col-md12 title size14 bl">
@@ -1020,12 +1032,20 @@
             </div>
             <div class="layui-form-item">
               <label class="layui-form-label">打款凭证：</label>
-              <div class="layui-input-block">
+              <div class="layui-input-block img_div">
+                <div class="left">
+                  <img src="images/scanQRcode.png" alt="" srcset="">
+                </div>
+                <img src="images/update.png" alt="" srcset="" id="pz">
               </div>
             </div>
             <div class="layui-form-item">
               <label class="layui-form-label">其他资料：</label>
-              <div class="layui-input-block">
+              <div class="layui-input-block img_div">
+                <div class="left">
+                  <img src="images/scanQRcode.png" alt="" srcset="">
+                </div>
+                <img src="images/update.png" alt="" srcset="" id="else">
               </div>
             </div>
             <div class="layui-form-item layui-form-text">
@@ -1036,6 +1056,173 @@
             </div>
           </div>
         </form>
+        <div class="layui-row btns">
+          <div class=" layui-col-md2 layui-col-md-offset4">
+            <button type="button" class="layui-btn layui-btn-radius layui-btn-primary size16 prev" lay-filter="afterStep">取消</button>
+          </div>
+          <div class=" layui-col-md2">
+            <button type="button" class="layui-btn layui-btn-radius layui-btn-normal size16" lay-submit lay-filter="nextStep">确定</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- 确认收款 -->
+    <div class="page common" id="ensureDetail">
+      <p class="boder_1">确认收款</p>
+      <div class="layui-row mods">
+        <div class="layui-col-md12 title size14 bl">
+          报价明细
+        </div>
+        <table class="tables" id="table3"></table>
+        <form class="layui-form form1" action="">
+          <div class="layui-row">
+            <div class="layui-col-md12 title40 al bl br bt">
+              基本信息
+            </div>
+          </div>
+          <div class="form productInfo">
+            <div class="layui-form-item">
+              <label class="layui-form-label">委托人：</label>
+              <div class="layui-input-block">
+                <span>河北蓝瑞照明科技有限公司</span>
+              </div>
+            </div>
+            <div class="layui-form-item">
+              <label class="layui-form-label">申请编号：</label>
+              <div class="layui-input-block">
+                <span>CB2019CQC-087255</span>
+              </div>
+            </div>
+            <div class="layui-form-item">
+              <label class="layui-form-label">待支付金额：</label>
+              <div class="layui-input-block">
+                <span>3000.00</span>
+              </div>
+            </div>
+            <div class="layui-form-item">
+              <label class="layui-form-label"><span class="red">*</span>支付方式：</label>
+              <div class="layui-input-block">
+                <input type="radio" name="payMethod" value="现结" title="现结" checked="">
+                <input type="radio" name="payMethod" value="协议月结" title="协议月结">
+                <input type="radio" name="payMethod" value="担保" title="担保">
+                <input type="text" name="payMethod" lay-verify="title" autocomplete="off" placeholder="担保人姓名" class="layui-input">
+              </div>
+            </div>
+            <div class="layui-form-item">
+              <label class="layui-form-label"><span class="red">*</span>金额：</label>
+              <div class="layui-input-block">
+                <input type="text" name="title" lay-verify="title" autocomplete="off" placeholder="" class="layui-input">
+              </div>
+            </div>
+            <div class="layui-form-item">
+              <label class="layui-form-label">打款凭证：</label>
+              <div class="layui-input-block img_div">
+                <div class="left">
+                  <img src="images/scanQRcode.png" alt="" srcset="">
+                </div>
+                <img src="images/update.png" alt="" srcset="" id="else">
+              </div>
+            </div>
+            <div class="layui-form-item">
+              <label class="layui-form-label">其他资料：</label>
+              <div class="layui-input-block img_div">
+                <div class="left">
+                  <img src="images/scanQRcode.png" alt="" srcset="">
+                </div>
+                <img src="images/update.png" alt="" srcset="" id="else">
+              </div>
+            </div>
+            <div class="layui-form-item layui-form-text">
+              <label class="layui-form-label">备注：</label>
+              <div class="layui-input-block">
+                <textarea placeholder="" class="layui-textarea"></textarea>
+              </div>
+            </div>
+          </div>
+        </form>
+        <div class="layui-row btns">
+          <div class=" layui-col-md2 layui-col-md-offset4">
+            <button type="button" class="layui-btn layui-btn-radius layui-btn-primary size16 prev" lay-filter="afterStep">取消</button>
+          </div>
+          <div class=" layui-col-md2">
+            <button type="button" class="layui-btn layui-btn-radius layui-btn-normal size16" lay-submit lay-filter="nextStep">确定</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- 新增标志 -->
+    <div class="page common" id="newB">
+      <div class="layui-row mods">
+        <form class="layui-form form1" action="">
+          <div class="layui-row">
+            <div class="layui-col-md12 title40 al bl br bt">
+              新增
+            </div>
+          </div>
+          <div class="form productInfo">
+            <div class="layui-form-item">
+              <label class="layui-form-label">申请人：</label>
+              <div class="layui-input-block">
+                <span>河北蓝瑞照明科技有限公司</span>
+              </div>
+            </div>
+            <div class="layui-form-item">
+              <label class="layui-form-label">联系人：</label>
+              <div class="layui-input-block">
+                <input type="text" name="payMethod" lay-verify="title" autocomplete="off" placeholder="" class="layui-input">
+              </div>
+            </div>
+            <div class="layui-form-item">
+              <label class="layui-form-label">联系人电话：</label>
+              <div class="layui-input-block">
+                <input type="text" name="payMethod" lay-verify="title" autocomplete="off" placeholder="" class="layui-input">
+              </div>
+            </div>
+            <div class="layui-form-item">
+              <label class="layui-form-label"><span class="red">*</span>联系人邮箱：</label>
+              <div class="layui-input-block">
+                <input type="text" name="payMethod" lay-verify="title" autocomplete="off" placeholder="" class="layui-input">
+              </div>
+            </div>
+            <div class="layui-form-item">
+              <label class="layui-form-label"><span class="red">*</span>地址：</label>
+              <div class="layui-input-block">
+                <input type="text" name="payMethod" lay-verify="title" autocomplete="off" placeholder="" class="layui-input">
+              </div>
+            </div>
+            <div class="layui-form-item layui-form-text">
+              <label class="layui-form-label">传真：</label>
+              <div class="layui-input-block">
+                <input type="text" name="payMethod" lay-verify="title" autocomplete="off" placeholder="" class="layui-input">
+              </div>
+            </div>
+            <div class="layui-form-item">
+              <label class="layui-form-label"><span class="red">*</span>证书编号：</label>
+              <div class="layui-input-block">
+                <div class="flexbox">
+                  <input type="text" name="payMethod" lay-verify="title" autocomplete="off" placeholder="" class="layui-input">
+                  <button type="button" class="layui-btn layui-btn-primary">选择证书</button>
+                </div> 
+              </div>
+            </div>
+            <div class="layui-form-item layui-form-text">
+              <label class="layui-form-label">支付方式：</label>
+              <div class="layui-input-block">
+                <input type="radio" name="payMethod" value="现结" title="现结" checked="">
+                <input type="radio" name="payMethod" value="协议月结" title="协议月结">
+              </div>
+            </div>
+          </div>
+        </form>
+        <table class="tables" id="table4"></table>
+        <div class="layui-row">
+          <div class="layui-form-item">
+            <label class="layui-form-label">标志总价：</label>
+            <div class="layui-input-block">
+              <input type="text" name="payMethod" lay-verify="title" autocomplete="off" placeholder="" class="layui-input disabled">
+            </div>
+          </div>
+        </div>
         <div class="layui-row btns">
           <div class=" layui-col-md2 layui-col-md-offset4">
             <button type="button" class="layui-btn layui-btn-radius layui-btn-primary size16 prev" lay-filter="afterStep">取消</button>
@@ -1059,6 +1246,19 @@
     <a class="first_a" lay-event="edit">重新上传</a>
     <a class="" lay-event="del">删除</a>
   </script>
+  <script type="text/html" id="selectSgdw">
+    <select name="sgdw"  lay-filter="sgdw"  data-value="{{d.sgdw}}">
+        <option value="1">版</option>
+    </select>
+  </script> 
+  <script type="text/html" id="selectGg">
+    <select name="gg"  lay-filter="gg"  data-value="{{d.gg}}">
+        <option value="1">1000枚</option>
+    </select>
+  </script> 
+  <script type="text/html" id="count">
+    <input type="text" name="payMethod" lay-verify="title" autocomplete="off" placeholder="请输入数量" class="layui-input">
+  </script> 
 <script src="layui/layui.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/index.js"></script>
