--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
           <form action="">
             <div class="input_div input_div1">
               <img id="img1" src="images/username.png" alt="">
-              <input type="text" name="userName" placeholder="请输入用户名称" onfocus="mouseOver('0')" onblur="mouseOut()">
+              <input type="text" name="userName" placeholder="请输入手机号码" onfocus="mouseOver('0')" onblur="mouseOut()">
             </div>
             <div class="input_div input_div1">
               <!-- <img id="img1" src="images/username.png" alt=""> -->
