--- a/index.html
+++ b/index.html
@@ -1259,6 +1259,9 @@
   <script type="text/html" id="count">
     <input type="text" name="payMethod" lay-verify="title" autocomplete="off" placeholder="请输入数量" class="layui-input">
   </script> 
+  <script type="text/html" id="bz">
+    <input type="text" name="payMethod" lay-verify="title" autocomplete="off" placeholder="请输入备注" class="layui-input">
+  </script> 
 <script src="layui/layui.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/index.js"></script>
